# carevl

./: .env.example  .gitignore  AGENTS.md  CareVL Admin.bat  HUONG_DAN_ADMIN.md  LICENSE  QUY_CHE_VAN_HANH.md  README.md  SPECS.md  TUTORIAL.md  UI_UX_DIRECTION.md  WORKFLOW.md  admin-aggregate-data.bat  admin-build-stations.bat  admin-check-stations.bat  admin-export-onboarding.bat  admin_main.py  dev-hot-merge-canary-to-main.bat  dev-merge-canary-to-main.bat  install.sh  install_canary.sh  launcher.bat  main.py  pyproject.toml
.github/workflows/: aggregate.yml
AGENTS/: IMAGE_GUIDE.md
AGENTS/ACTIVE/: 01_FastAPI_Core.md  02_SQLite_Security.md  03_Web_UI_HTMX.md  04_Development_Guidelines.md  07_active_sync_protocol.md  08_Huong_Dan_Admin.md  (+21 more)
Admin/: Aggregate-System-Data.bat  Build-Stations-Json.bat  Check-Stations.bat  Export-Onboarding-Checklist.bat  Launch-Admin-App.bat  README.md
Onboarding/: Bootstrap-GitHub.ps1  Bootstrap-User.ps1  Launch-Exe.bat  README.md  Start-User-App.bat
app/: main.py  tests.py
config/: app_config.json  omr_form_layout.json  stations.csv  stations.json  template_form.json
docs/: ADMIN_HUB_DESIGN.md
hub/: pyproject.toml
hub/carevl_hub/: admin.py  aggregator.py  cli.py  crypto.py  db.py  downloader.py  github_api.py
hub/carevl_hub/gui/: __init__.py  app.py  tab_invite.py  tab_stations.py
hub/tests/: test_downloader.py  test_gui.py  test_pipeline.py
legacy/: dev-hot-merge-canary-to-main.bat  dev-logs.bat  dev-run.bat  dev-test-branch.bat  launcher.bat
modules/: __init__.py  auth.py  config_loader.py  crud.py  form_engine.py  membership.py  omr.py  omr_bridge.py  omr_reader.py  sync.py  validator.py
scripts/: aggregate_station_data.py  build_stations_json.py  check_station_registry.py  export_csv.py  export_onboarding_checklist.py  install.ps1  install_canary.ps1  run-edge-dev.bat  run-hub-gui-dev.bat  setup.ps1  test_fresh_install.ps1  verify_auth.py
tests/: test_auth.py  test_crud.py  test_paths.py  test_sync.py  test_validator.py
ui/: admin_app.py  app.py  screen_form.py  screen_list.py  screen_sync.py  ui_components.py
(+103 files in other folders)
