[project]
name = "carevl"
version = "0.1.0"
description = "Care Vinh Long - Health record management software"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "tksheet>=7.0.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.4.0",
    "mypy>=1.5.0",
]
