[project]
name = "carevl-hub"
version = "2.0.0"
description = "CareVL Hub - Data aggregation and analytics CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.1",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "httpx>=0.28.1",
    "cryptography>=44.0.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "streamlit>=1.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "plotly>=5.24.1",
]

[project.scripts]
carevl-hub = "carevl_hub.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carevl_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
